<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:id="@+id/bar_code"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp" 
        android:text="@string/bar_code" />

    <TextView
        android:id="@+id/imei1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp" 
        android:text="@string/imei1" />

    <TextView
        android:id="@+id/imei2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp" 
        android:text="@string/imei2" />

    <TextView
        android:id="@+id/sim1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp" 
        android:text="@string/sim1" />

    <TextView
        android:id="@+id/sim2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp" 
        android:text="@string/sim2" />

    <TextView
        android:id="@+id/internal_storage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp" 
        android:text="@string/internal_storage_string" />

    <TextView
        android:id="@+id/sdcard"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp" 
        android:text="@string/sd_volume" />

    <TextView
        android:id="@+id/sw_version"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/sw_version_value"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"/>

    <LinearLayout
        android:id="@+id/add_bottom_panel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/correct"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dip"
            android:text="@string/correct"
            android:textSize="19sp" />

        <Button
            android:id="@+id/error"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:text="@string/error"
            android:textSize="19sp" />

        <Button
            android:id="@+id/reset"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:text="@string/reset"
            android:textSize="19sp" />
    </LinearLayout>

</LinearLayout>