<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:id="@+id/add_bottom_panel"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:id="@+id/headset_insert"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp" 
            android:text="@string/s_headset_insert" />
        <TextView
            android:id="@+id/fm_freq"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp" 
            android:text="@string/fix_fm_freq" />
        <Button
            android:id="@+id/fm_tune"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:text="@string/tune"
            android:textSize="18sp"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_bottom_panel"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/correct"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dip"
            android:text="@string/correct"
            android:textSize="19sp" />
        <Button
            android:id="@+id/error"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:text="@string/error"
            android:textSize="19sp" />
        <Button
            android:id="@+id/reset"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:text="@string/reset"
            android:textSize="19sp" />
    </LinearLayout>

</RelativeLayout>
