<?xml version="1.0" encoding="utf-8"?>
<!--[BIRD][BIRD_SMT_SW_MARQUEE_LED_TEST][贴片测试_跑马灯测试][zhangaman][20170703]begin-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical"
	android:background="@drawable/WHITE">
	<Button
			android:id="@+id/button1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
android:text="@string/all_lighs_on"
			android:textSize="19sp"/>

  <LinearLayout
        android:id="@+id/add_bottom_panel"
        android:layout_width="fill_parent"
        android:layout_height="90px"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal" >
	<Button
			android:id="@+id/correct"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_marginLeft="10dip"
			android:text="@string/correct"
			android:textSize="19sp"

			/>
		<Button
			android:id="@+id/error"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_marginLeft="10dip"
			android:layout_marginRight="10dip"
			android:text="@string/error"
			android:textSize="19sp"

			/>
			<Button
			android:id="@+id/reset"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_marginLeft="10dip"
			android:layout_marginRight="10dip"
			android:text="@string/reset"
			android:textSize="19sp"

			/>
     
    </LinearLayout>
</RelativeLayout>
<!--[BIRD][BIRD_SMT_SW_MARQUEE_LED_TEST][贴片测试_跑马灯测试][zhangaman][20170703]end-->
