<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical">
    
    <Button
        android:id="@+id/case_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_test" />
        
    <TextView
        android:id="@+id/fp_test_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/case_test"
        android:text="@string/fp_test_guide"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/case_test"
        android:textColor="#ffffff"
        android:textSize="18dp" />

    <ImageView
        android:id="@+id/id_fp_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fp_test_guide"
        android:src="@drawable/fingerprint_progress_bar"/>

    <LinearLayout
        android:id="@+id/add_bottom_panel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/correct"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_weight="1"
            android:text="@string/correct"
            android:textSize="19sp" />

        <Button
            android:id="@+id/error"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_weight="1"
            android:text="@string/error"
            android:textSize="19sp" />

        <Button
            android:id="@+id/reset"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_weight="1"
            android:text="@string/reset"
            android:textSize="19sp" />
    </LinearLayout>

</RelativeLayout>
